--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,26 +1,22 @@
-{% extends 'base.html' %}
-{% block content %}
-
-    {% for task in tasks %}
-        {{task.task_name}}
-        {{task.category_name}}
-        {{task.task_description}}
-        {{task.is_urgent}}
-        {{task.due_date}}
-    {% endfor %}
-  <ul class="collapsible">
-    <li>
-      <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-    </li>
-    <li>
-      <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-    </li>
-    <li>
-      <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-    </li>
+{% extends 'base.html' %} {% block content %}
+    
+    <ul class="collapsible">
+        {% for task in tasks %}
+        <li>
+            <div class="collapsible-header">
+                <span class="material-icons">keyboard_arrow_down </span>
+                <strong>{{task.task_name}}</strong> : {{task.due_date}}
+                {% if task.is_urgent == "on" %}
+                    <i class="fas fa-exclamation-circle light-blue-text text-lighten-2 tooltipped"
+                        data-position="right" data-tooltip="URGENT!"></i>
+                {% endif %}
+            </div>
+            <div class="collapsible-body">
+                <strong>{{task.category_name}}</strong>
+                <p>{{task.task_description}}</p>
+            </div>
+        </li>
+        {% endfor %}
   </ul>
 {% endblock %}
 
