categories dropdown added

--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -6,6 +6,19 @@
     <form action="" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s12">
+            <i class="material-icons prefix">poll</i>
+                <select id="category" name="category_name">
+                    <option value="" disabled selected>Choose Category</option>
+                    <option value="1">Option 1</option>
+                    <option value="2">Option 2</option>
+                    <option value="3">Option 3</option>
+                </select>
+                <label>Task category</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
                 <i class="material-icons prefix">assignment</i>
                 <input id="task_name" name="task_name" type="text" class="validate">
                 <label for="icon_prefix">Task Name</label>
