--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
     <script type="text/javascript">
         $(document).ready(function(){
             $('.collapsible').collapsible();
+            $('select').material_select();
         });
 
         $(document).ready(function(){
@@ -34,6 +35,7 @@
         document.getElementById("matfix").addEventListener("click", function(e) {
 	        e.stopPropagation();
         });
+
     </script>
     
 </body>
