--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -9,9 +9,9 @@
             <i class="material-icons prefix">poll</i>
                 <select id="category" name="category_name">
                     <option value="" disabled selected>Choose Category</option>
-                    <option value="1">Option 1</option>
-                    <option value="2">Option 2</option>
-                    <option value="3">Option 3</option>
+                    {% for cat in categories %}
+                        <option value="{{cat.category_name}}">{{cat.category_name}}</option>
+                    {% endfor %}
                 </select>
                 <label>Task category</label>
             </div>
