--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -7,7 +7,7 @@
                 <div class="col s3">
                     <span class="material-icons">keyboard_arrow_down </span>
                     <a class="waves-effect waves-light btn btn_small">Done</a>
-                    <a class="waves-effect waves-light btn btn_small blue">Edit</a>
+                    <a href="{{url_for('edit_task', task_id=task._id)}}" class="waves-effect waves-light btn btn_small blue">Edit</a>
                 </div>
                 <div class="col s3 task_header">
                     <strong>{{task.task_name}}</strong> : {{task.due_date}}
